--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "next",
+    "dev": "yarn run backend & next",
     "build": "next build",
-    "start": "next start"
+    "backend": "json-server ./data/survey_results.json --port 3001",
+    "start": "yarn run backend & next start"
   },
   "dependencies": {
+    "isomorphic-unfetch": "^3.0.0",
+    "json-server": "^0.15.0",
     "next": "^8.1.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
