--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "json-server": "^0.15.0",
     "next": "^8.1.0",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-select": "^3.0.4"
   }
 }
