--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "isomorphic-unfetch": "^3.0.0",
     "json-server": "^0.15.0",
     "next": "^8.1.0",
+    "ramda": "^0.26.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-select": "^3.0.4"
+    "react-select": "^3.0.4",
+    "recharts": "^1.6.2"
   }
 }
